[tool.poetry]
name = "mlflow-machine-learning"
version = "0.1.0"
description = ""
authors = ["Jai SIngh <44313028+jai8004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
